# DashboardIntelligence

./: .gitignore  .replit  README.md  app.py  db_utils.py  pyproject.toml  utils.py
.streamlit/: config.toml
attached_assets/: Pasted-Build-an-AI-Powered-KPI-Audit-Tool-Project-Overview-Create-an-AI-powered-KPI-audit-tool-that-analyze-1745891636782.txt  Pasted-import-pandas-as-pd-import-numpy-as-np-import-matplotlib-pyplot-as-plt-import-seaborn-as-sns-import--1745891656067.txt  logs-megan-louie-dashboardintelligence-main-app.py-2025-04-29T02_44_32.999Z.txt  week 2 - Problem_4_-_Vanity_Metrics_Dashboard__Revised_.csv
